# aluminium-prediction-api

./: README.md  docker-compose.yaml  k8s.md  pyproject.toml
deploy/redis/: Dockerfile
scripts/: add_apikey.py  backup_apikeys.py  docker_push.sh  restore_apikey.py  see_apikeys.py
src/databases/: redisutil.py
src/service/: main.py
src/service/middlewares/: correlation.py
